# model_shard

./: .gitignore  README.md  pyproject.toml
config/: shards.heterogeneous.example.yaml  shards.tests.yaml  shards.yaml
docs/: gossip-moe-inference-spec.md
docs/runbooks/: heterogeneous_3node.md
proto/: wire.proto
scripts/: convert_mlx_bf16.py  generate_pytorch_tier1_fixture.py  generate_tier1_comparison_fixture.py  run_client.py  run_node.py  run_orchestrator.py  run_reference.py  spark_smoke_test.py
src/model_shard/: client.py  moe.py  (+18 more)
tests/: conftest.py  prompts.json  test_backend_autodetect.py  test_backend_protocol.py  test_bf16_memory_smoke.py  test_cross_backend_correctness.py  test_cross_backend_wire_roundtrip.py  test_decode_hang_fix.py  test_decode_hang_fix_e2e.py  test_distributed_pipeline.py  test_dynamic_migration_gate.py  test_envelope.py  test_eviction_e2e.py  test_eviction_race_with_expert_request.py  test_expert_envelope.py  test_expert_orchestrator.py  test_expert_orchestrator_observer.py  test_expert_orchestrator_timeout.py  test_expert_retry_bit_exact.py  test_expert_retry_e2e.py  test_expert_retry_unit.py  test_expert_rpc_failure.py  test_expert_rpc_handler.py  test_expert_rpc_load_shift.py  test_expert_weight_peer_rpc.py  test_handle_expert_request_authority.py  test_heat_tracker.py  test_heterogeneous_2subprocess.py  test_load_report_envelope.py  test_load_tracker.py  test_membership_heat_records.py  test_membership_load_records.py  test_membership_model_id_admission.py  test_membership_ownership_gossip.py  test_membership_runner_heat.py  test_membership_runner_loads.py  test_migration_bit_exact_per_expert.py  test_migration_over_tcp.py  test_migration_scanner_eviction.py  test_migration_scanner_policy.py  (+63 more)
(+55 files in other folders)
