[project]
name = "model-shard"
version = "0.0.1"
description = "Gossip-based distributed MoE inference — Phase 1 static pipeline prototype"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # MLX is Apple Silicon only; gate with platform marker so Linux installs
    # (e.g. DGX Spark) don't try to compile it from source.
    "mlx>=0.19 ; sys_platform == 'darwin'",
    "mlx-vlm>=0.4.3 ; sys_platform == 'darwin'",
    "protobuf>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.60",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-protobuf>=5.0",
    "types-pyyaml>=6.0",
]
pytorch = [
    "torch>=2.6",
    "transformers>=5.5.0",
    "accelerate>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_shard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: loads the 14GB model; opt-in via `pytest -m slow`",
    "cuda: requires NVIDIA CUDA (DGX Spark); skipped on Apple / CPU-only hosts",
]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/model_shard/_pb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
exclude = ["src/model_shard/_pb/"]

[[tool.mypy.overrides]]
module = ["mlx.*", "mlx_vlm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["model_shard._pb.*"]
follow_imports = "skip"
ignore_missing_imports = true
